First advance last day

--- a/src/pages/human-human.html
+++ b/src/pages/human-human.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- FUENTE POPPINS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Asap:ital,wght@0,100..900;1,100..900&family=Bebas+Neue&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- CSS ESTYLE -->
     <link rel="stylesheet" href="/src/styles/human-human.css">
     <title>Document</title>
@@ -18,10 +24,11 @@
         <div>
             <div>
                 <!-- <h2> PROGRESS BAR</h2> -->
-                <div class="w3-border">
+                <!-- <div class="w3-border">
                     <div class="w3-grey" style="height:24px;width:20%"></div>
-                  </div>
-
+                </div> -->
+                <h1>🕹️ UNLIMITED GAMES 💥</h1>
+              
             </div>
         </div>
 
@@ -87,27 +94,38 @@
 
         </div>
         <div class="third-section">
-          <div class="first-block">
-            <div>
-  <div  class="nombre"></div>
-                <div class="reset-button-container">
+            <div class="first-block">
+                <div>
+                    <div class="nombre"></div>
+                    <div class="reset-button-container">
+
+                        <button id="reset-button">RESET GAME</button>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="second-block">
+                <div>
+                    <h3>primerboton</h3>
+                    <div class="exit-button-container">
+
+                        <button id="exit-button">EXIT</button>
+
+
+                        <!-- 
+                    <div class="container">
+                        <h1 class="neonText">
+                              40% off
+                        </h1>
+                        <h2 class="neonText">Now through Aug. 1</h2> 
                     
-                    <button id="reset-button">RESET BUTON</button>
+                     </div> -->
+
+                    </div>
+
                 </div>
-
             </div>
-   
-          </div>
-          <div class="second-block">
-            <div>
-                <h3>primerboton</h3>
-                <div  class="exit-button-container">
-
-                    <button id="exit-button">EXIT</button>
-                </div>
-
-            </div>
-          </div>
         </div>
     </main>
 
