--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -16,13 +16,9 @@
     <header>
         <div>
             <div>
-                <h1>First part</h1>
+                <h1>CLOSER TO DANGER</h1>
 
-                <!-- <h2> PROGRESS BAR</h2> -->
-                <div class="w3-border">
-                    <div class="w3-grey" style="height:24px;width:20%"></div>
-                </div>
-
+        
             </div>
         </div>
 
@@ -40,17 +36,17 @@
                 <div class="reproductor-buttons">
                     <div class="reproductor-border">
 
-                        <button id="play-button">
+                        <button id="play-button2">
                             <img src="/src/img/play.svg" alt="">
                         </button>
-                        <button id="next-button">
+                        <button id="next-button2">
                             <img src="/src/img/next.svg" alt="">
                         </button>
-                        <button id="pause-button">
+                        <button id="pause-button2">
                             <img src="/src/img/pause.svg" alt="">
                         </button>
 
-                        <audio id="pasar"></audio>
+                        <audio id="pasa2"></audio>
 
                     </div>
 
