BOTH WIN VALIDATION

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </form>   
 
 
-        <audio id="mystical" ></audio>
+        <audio id="mystical" src="ff"></audio>
        
 
     </main>
