--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/src/styles/game.css">
-    <title>Document</title>
+    <title>Start a Game</title>
 
 </head>
 
@@ -21,9 +21,9 @@
     <div id="main">
         <div class="buttons-container">
             <div class="container">
-                <button onclick="redirectFuntion('./human-human.html')" id="mode-1">Competitive Mode.</button>
+                <button onclick="redirectFuntion('./human-human.html')" id="mode-1">Competitive Mode</button>
 
-                <button onclick="redirectFuntion('./human-machine.html')" id="mode-2">Demo mode.</button>
+                <button onclick="redirectFuntion('./human-machine.html')" id="mode-2">Demo mode</button>
 
 
             </div>
@@ -36,8 +36,11 @@
 
 
     <footer>
-
-        <h2>FOOTER</h2>
+<div class="copy">
+    <img src="/src/img/copyright.svg" alt="">
+    <h2>copyright / Kevin / one demo</h2>
+    
+</div>
     </footer>
 
 
