--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -16,7 +16,7 @@
     <header>
         <div>
             <div>
-                <h1>CLOSER TO DANGER</h1>
+                <h1>👣CLOSER TO DANGER 💀 </h1>
 
         
             </div>
